# graphblas_gpu

./: .gitignore  CMakeLists.txt  README.md  dense_vs_csr.cpp  gpu_info  gpu_info.cu  test_ewise_kernels.cpp  test_main.cpp  test_opscheduele.cpp
benchmarks/: CMakeLists.txt  kernel_launch_benchmark.cu
include/: api.hpp  graphblas_gpu.hpp
include/graphblas_gpu/: api.hpp  data_type.hpp  graph.hpp  graph_classifier.hpp  kernel_generator.hpp  op_compiler.hpp  op_sequence.hpp  operation.hpp  semiring.hpp  sparse_formats.hpp  termination_condition.hpp  vector.hpp
include/graphblas_gpu/kernels/: copy.hpp  ewise_ops.hpp  graphblas_kernels.hpp  spmv_csr.hpp  spmv_ell.hpp  spmv_sellc.hpp
kernels/: copy.cu  ewise_ops.cu  ewise_ops.h  spmv.cu  spmv_csr.cu  spmv_ell.cu  spmv_sellc.cu
src/: executor.cpp  kernel_generator.cpp  op_compiler.cpp  op_sequence.cpp  sparse_formats.cpp  termination_condition.cpp
tests/: CMakeLists.txt  benchmark_kernels.cpp  test_andor_semiring.cpp  test_bfs.cpp  test_copy.cpp  test_ewise_kernels.cpp  test_inplace.cpp  test_opscheduele.cpp  test_sparse_formats.cpp  test_spmv.cpp  test_spmvnaive.cpp  test_termination.cpp
utils/: CMakeLists.txt
utils/include/graphblas_gpu_utils/: matrix_generators.hpp  timing.hpp
utils/src/: matrix_generators.cpp
